NP-45863-inactive-customers-during-login, implemented